Fixed .header .pic z-index issue

--- a/assets/sass/intro/intro.sass
+++ b/assets/sass/intro/intro.sass
@@ -1,9 +1,6 @@
-#intro
-    position: relative
+.intro
     background: $intro_static
     color: #ededed
-    -moz-osx-font-smoothing: grayscale
-    -webkit-font-smoothing: antialiased
 
 .intro .pic
     max-width: 160px
@@ -11,7 +8,6 @@
     height: auto
     border-radius: 300px
     box-shadow: 0 0 20px $intro_pic_shadow
-    z-index: 9999
 
 .intro .title
     font-size: em(34)
